--- a/team/markup.html
+++ b/team/markup.html
@@ -4,7 +4,7 @@
 	<head >
 		<title>WorldVent Markup Standards</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="../screen.css" title="WorldVent CSS" type="text/css" media="screen">
+		<link rel="stylesheet" href="../css/screen.css" title="WorldVent CSS" type="text/css" media="screen">
 		<link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Bitter">
          <link rel="stylesheet"
