Bulletin and overview

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
 <h1><a href="/index.html">WorldVent</a></h1>
 
 
+<h2>WorldVent Documentation</h2>
+<ul>
+	<li> <a href="/doc/index.html">Overview </a></li>
+	<li> WorldVent Controls </li>
+	<li> WorldVent Indicators and Alarms </li>
+	<li> Patient Management </li>
+	<li> Glossary </li>
+	<li> Help </li>
+
+
+</ul>
+
+<h2>WordVent App Documentation</h2>
+	<ul>
+		<li> <a href="/app/Bulletins.html" >Bulletins </a></li>
+	</ul>
+
+
 <h2>Team</h2>
 <h3>University of Washington: points of contact</h3>
 <ul>
