Application note on bulletins; update to use <header>

--- a/team/graphic.html
+++ b/team/graphic.html
@@ -12,7 +12,7 @@
 	</head>
 	<body id="index">
 
-<h1><a href="/index.html">WorldVent Graphic Standards</a></h1>
+<header><a href="/index.html">WorldVent</a></header>
 
 
 <h2> Fonts </h2>
