Application note on bulletins; update to use <header>

--- a/team/markup.html
+++ b/team/markup.html
@@ -12,7 +12,7 @@
 	</head>
 	<body id="index">
 
-<h1><a href="/index.html">WorldVent Markup Standards</a></h1>
+<header><a href="/index.html">WorldVent</a></header>
 
 <h2>Semantic Markup</h2>
 <p>Keep markup simple and clear. Try not to get fancy. Rely on the stylesheets to make things
