--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body id="index">
 
-<h1><a href="/index.html">WorldVent</a></h1>
+<header><a href="/index.html">WorldVent</a></header>
 
 
 <h2>WorldVent Documentation</h2>
