Application note on bulletins; update to use <header>

--- a/team/markup.html
+++ b/team/markup.html
@@ -22,6 +22,9 @@
 <h2>Measure in ems or %, not points</h2>
 <p>Try to avoid fixed sizes</p>
 
+<h2>Relative URLs</h2>
+<p>Make life easy for the Android application: use relative URLs for all stylesheets ands other URL references.</p>
+
 
 <footer>
 	DRAFT: Preliminary documentation. Do not rely on this information.
