updated viewports, and links to relaltive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<head >
 		<title>WorldVent</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/screen.css" title="WorldVent CSS" type="text/css" media="screen">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="./css/screen.css" title="WorldVent CSS" type="text/css" media="screen">
 		<link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Bitter">
          <link rel="stylesheet"
@@ -12,12 +13,12 @@
 	</head>
 	<body id="index">
 
-<header><a href="/index.html">WorldVent</a></header>
+<header><a href="./index.html">WorldVent</a></header>
 
 
 <h2>WorldVent Documentation</h2>
 <ul>
-	<li> <a href="/doc/index.html">Overview </a></li>
+	<li> <a href="./doc/index.html">Overview </a></li>
 	<li> WorldVent Controls </li>
 	<li> WorldVent Indicators and Alarms </li>
 	<li> Patient Management </li>
@@ -29,7 +30,7 @@
 
 <h2>WordVent App Documentation</h2>
 	<ul>
-		<li> <a href="/app/Bulletins.html" >Bulletins </a></li>
+		<li> <a href="./app/Bulletins.html" >Bulletins </a></li>
 	</ul>
 
 
@@ -69,8 +70,8 @@
 
 <h2>Standards</h2>
 <ul>
-	<li><a href="team/graphic.html">Graphic Standards</a></li>
-	<li><a href="team/markup.html">Markup Standards</a></li>
+	<li><a href="./team/graphic.html">Graphic Standards</a></li>
+	<li><a href="./team/markup.html">Markup Standards</a></li>
 </ul>
 
 
