New contact roles Added a page for languages

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <h2>WordVent App Documentation</h2>
 	<ul>
 		<li> <a href="./app/Bulletins.html" >Bulletins </a></li>
+		<li> <a href="./app/Languages.html" >Languages </a></li>
 	</ul>
 
 
@@ -40,6 +41,8 @@
 	<li>Blake Hannaford: engineering</li>
 	<li>Jo Davies, MD: training materials</li>
 	<li>Darin Zehurng: marketing and communications</li>
+	<li>Patrick McKern: graphics standards</li>
+	<li>Rachel Hammack: languages and localization</li>
 </ul>
 <h3>Oversight</h3>
 <ul>
