More on languages

--- a/app/Languages.html
+++ b/app/Languages.html
@@ -16,6 +16,15 @@
 
 <h1>Languages</h1>
 
+<p>The first release to be developed will be American English.</p>
+
+<p>Languages we may eventually support include French, Spanish, Arabic and Malay.</p>
+
+
+<h2> Considerations </h2>
+
+<p>Navigation bar: Arabic reads right-to-left; this may require flipping the order of buttons
+	on the nav bar.</p>
 
 
 
