--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <h2>WordVent App Documentation</h2>
 	<ul>
 		<li> <a href="./app/Bulletins.html" >Bulletins </a></li>
-		<li> <a href="./app/Guidelines.html">Guiding Assumnptions</a></li>
+		<li> <a href="./app/Guidelines.html">Guidelines For Planning</a></li>
 		<li> <a href="./app/Languages.html" >Languages </a></li>
 	</ul>
 
