--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	<li>Nursing: Alwin Hawkins</li>
 	<li>Software ethnography: Catherine C. Marshall</li>
 	<li>Anatomy/Public Science: Abby Hafer</li>
+	<li>Arabic: Ahmed Nabil M.D.</li>
 </ul>
 
 
