--- a/app/Languages.html
+++ b/app/Languages.html
@@ -3,6 +3,8 @@
 <html lang="en">
 	<head >
 		<title>WorldVent Languages</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="../css/screen.css" title="WorldVent CSS" type="text/css" media="screen">
 		<link rel="stylesheet"
