More cleanup so tests pass

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <header><a href="./index.html">WorldVent</a></header>
 
 
-<h2>WorldVent Documentation</h2>
+<h1>WorldVent Information</h1>
+
+<h2>Ventilator Documentation</h2>
 <ul>
 	<li> <a href="./doc/index.html">Overview </a></li>
 	<li> WorldVent Controls </li>
